--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
       - name: Install dependencies
         working-directory: backend
-        run: uv sync --frozen
+        run: uv sync --frozen --all-groups
       - name: Lint with Ruff
         working-directory: backend
         run: uv run ruff check .
