--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,11 @@ dependencies = [
     "uvicorn[standard]>=0.34.0",
 ]
 
+[dependency-groups]
+dev = [
+    "ruff>=0.9.0",
+]
+
 [tool.ruff]
 line-length = 88
 target-version = "py314"
