--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -28,15 +28,18 @@ jobs:
         working-directory: backend
         run: uv sync --frozen --all-groups
 
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@master
+        working-directory: backend
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --sarif-file-output=snyk.sarif
+        run: snyk test --sarif-file-output=snyk.sarif || true
 
       - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
+        if: always()
         with:
-          sarif_file: snyk.sarif
+          sarif_file: backend/snyk.sarif
