--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -36,14 +36,13 @@ jobs:
         run: uv export --format requirements-txt > requirements.txt
 
       - name: Run Snyk to check for vulnerabilities
-        working-directory: backend
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk test --file=requirements.txt --sarif-file-output=snyk.sarif || true
+        run: snyk test --file=backend/requirements.txt --sarif-file-output=snyk.sarif || true
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: backend/snyk.sarif
+          sarif_file: snyk.sarif
